{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 236,
  "lineage": "e682bfd8-be6c-ecb8-0a75-de77e1313ee2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dawgs_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbd7f14ac232f612",
            "arn": "arn:aws:ec2:us-east-1:414392949667:elastic-ip/eipalloc-0dbd7f14ac232f612",
            "domain": "vpc",
            "id": "eipalloc-0dbd7f14ac232f612",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-50-197-113.compute-1.amazonaws.com",
            "public_ip": "100.50.197.113",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dawgs-nat-eip01"
            },
            "tags_all": {
              "Name": "dawgs-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dawgs_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:414392949667:instance/i-012ab38502ed572ea",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dawgs-instance-profile01",
            "id": "i-012ab38502ed572ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-069e43228e600381a"
              }
            ],
            "primary_network_interface_id": "eni-069e43228e600381a",
            "private_dns": "ip-10-180-11-105.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.180.11.105",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-090620270c0c2fe77",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c2a7b46b2c27adf",
            "tags": {
              "Name": "dawgs-ec201-private"
            },
            "tags_all": {
              "Name": "dawgs-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0bc8f3e02642bf5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "i-012ab38502ed572ea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.dawgs_instance_profile01",
            "aws_iam_role.dawgs_ec2_role01",
            "aws_security_group.dawgs_ec2_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dawgs_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:internet-gateway/igw-0a57f15c3ea4690f4",
            "id": "igw-0a57f15c3ea4690f4",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "tags": {
              "Name": "dawgs-igw01"
            },
            "tags_all": {
              "Name": "dawgs-igw01"
            },
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dawgs_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dawgs-alb-logs-414392949667",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:loadbalancer/app/dawgs-alb01/a2497bb69624c0f4",
            "arn_suffix": "app/dawgs-alb01/a2497bb69624c0f4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dawgs-alb01-666813911.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414392949667:loadbalancer/app/dawgs-alb01/a2497bb69624c0f4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dawgs-alb01",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-05c2a2cf543005b0b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0614666aa8464c3c9"
              },
              {
                "subnet_id": "subnet-0713a8c8661527d6d"
              }
            ],
            "subnets": [
              "subnet-0614666aa8464c3c9",
              "subnet-0713a8c8661527d6d"
            ],
            "tags": {
              "Name": "dawgs-alb01"
            },
            "tags_all": {
              "Name": "dawgs-alb01"
            },
            "vpc_id": "vpc-0e5b7895353587212",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:loadbalancer/app/dawgs-alb01/a2497bb69624c0f4"
          },
          "dependencies": [
            "aws_s3_bucket.dawgs_alb_logs_bucket01",
            "aws_security_group.dawgs_alb_sg01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_caller_identity.dawgs_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dawgs_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:listener/app/dawgs-alb01/a2497bb69624c0f4/007170ae6a3433f6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414392949667:listener/app/dawgs-alb01/a2497bb69624c0f4/007170ae6a3433f6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:loadbalancer/app/dawgs-alb01/a2497bb69624c0f4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:listener/app/dawgs-alb01/a2497bb69624c0f4/007170ae6a3433f6"
          },
          "dependencies": [
            "aws_lb.dawgs_alb01",
            "aws_s3_bucket.dawgs_alb_logs_bucket01",
            "aws_security_group.dawgs_alb_sg01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_caller_identity.dawgs_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dawgs_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:listener/app/dawgs-alb01/a2497bb69624c0f4/de561f4086fae248",
            "certificate_arn": "arn:aws:acm:us-east-1:414392949667:certificate/9aa9f075-dba4-4b87-a6da-48f04d8e194a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/dawgs-tg01/301347a593879441",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414392949667:listener/app/dawgs-alb01/a2497bb69624c0f4/de561f4086fae248",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:loadbalancer/app/dawgs-alb01/a2497bb69624c0f4",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:listener/app/dawgs-alb01/a2497bb69624c0f4/de561f4086fae248"
          },
          "dependencies": [
            "aws_acm_certificate.dawgs_acm_cert01",
            "aws_acm_certificate_validation.dawgs_acm_validation01",
            "aws_lb.dawgs_alb01",
            "aws_lb_target_group.dawgs_tg01",
            "aws_route53_record.dawgs_acm_validation_records01",
            "aws_s3_bucket.dawgs_alb_logs_bucket01",
            "aws_security_group.dawgs_alb_sg01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_caller_identity.dawgs_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dawgs_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/dawgs-tg01/301347a593879441",
            "arn_suffix": "targetgroup/dawgs-tg01/301347a593879441",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/dawgs-tg01/301347a593879441",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dawgs-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dawgs-tg01"
            },
            "tags_all": {
              "Name": "dawgs-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/dawgs-tg01/301347a593879441"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dawgs_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/dawgs-tg01/301347a593879441-2026012314374383910000000e",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/dawgs-tg01/301347a593879441",
            "target_id": "i-012ab38502ed572ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.dawgs_instance_profile01",
            "aws_iam_role.dawgs_ec2_role01",
            "aws_instance.dawgs_ec201_private_bonus",
            "aws_lb_target_group.dawgs_tg01",
            "aws_security_group.dawgs_ec2_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dawgs_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbd7f14ac232f612",
            "association_id": "eipassoc-0e5377393d77ff0c0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-05299aa959748e363",
            "network_interface_id": "eni-0d099a6bb971f74ce",
            "private_ip": "10.180.1.109",
            "public_ip": "100.50.197.113",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0614666aa8464c3c9",
            "tags": {
              "Name": "dawgs-nat01"
            },
            "tags_all": {
              "Name": "dawgs-nat01"
            },
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.dawgs_nat_eip01",
            "aws_internet_gateway.dawgs_igw01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dawgs_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-024c023e6c11c9e981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05299aa959748e363",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-024c023e6c11c9e98",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-024c023e6c11c9e98"
          },
          "dependencies": [
            "aws_eip.dawgs_nat_eip01",
            "aws_internet_gateway.dawgs_igw01",
            "aws_nat_gateway.dawgs_nat01",
            "aws_route_table.dawgs_private_rt01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dawgs_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a57f15c3ea4690f4",
            "id": "r-rtb-0f727c7307c2f72d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f727c7307c2f72d8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0f727c7307c2f72d8"
          },
          "dependencies": [
            "aws_internet_gateway.dawgs_igw01",
            "aws_route_table.dawgs_public_rt01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dawgs_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:route-table/rtb-024c023e6c11c9e98",
            "id": "rtb-024c023e6c11c9e98",
            "owner_id": "414392949667",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "dawgs-private-rt01"
            },
            "tags_all": {
              "Name": "dawgs-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "rtb-024c023e6c11c9e98",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dawgs_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:route-table/rtb-0f727c7307c2f72d8",
            "id": "rtb-0f727c7307c2f72d8",
            "owner_id": "414392949667",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "dawgs-public-rt01"
            },
            "tags_all": {
              "Name": "dawgs-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "rtb-0f727c7307c2f72d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dawgs_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edafddfb05597be8",
            "region": "us-east-1",
            "route_table_id": "rtb-024c023e6c11c9e98",
            "subnet_id": "subnet-04c2a7b46b2c27adf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.dawgs_private_rt01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d25f969dc655ece3",
            "region": "us-east-1",
            "route_table_id": "rtb-024c023e6c11c9e98",
            "subnet_id": "subnet-0669c837a2ad3f07d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.dawgs_private_rt01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dawgs_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0346344c01552a8e6",
            "region": "us-east-1",
            "route_table_id": "rtb-0f727c7307c2f72d8",
            "subnet_id": "subnet-0614666aa8464c3c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.dawgs_public_rt01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0544a01b648747f2a",
            "region": "us-east-1",
            "route_table_id": "rtb-0f727c7307c2f72d8",
            "subnet_id": "subnet-0713a8c8661527d6d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.dawgs_public_rt01",
            "aws_subnet.dawgs_public_subnets",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dawgs_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group/sg-05c2a2cf543005b0b",
            "description": "ALB security group",
            "egress": [],
            "id": "sg-05c2a2cf543005b0b",
            "ingress": [],
            "name": "dawgs-alb-sg01",
            "name_prefix": "",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dawgs-alb-sg01"
            },
            "tags_all": {
              "Name": "dawgs-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sg-05c2a2cf543005b0b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dawgs_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group/sg-0c0bc8f3e02642bf5",
            "description": "EC2 app security group",
            "egress": [],
            "id": "sg-0c0bc8f3e02642bf5",
            "ingress": [],
            "name": "dawgs-ec2-sg01",
            "name_prefix": "",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dawgs-ec2-sg01"
            },
            "tags_all": {
              "Name": "dawgs-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sg-0c0bc8f3e02642bf5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dawgs_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group/sg-05df608fa3cda393b",
            "description": "RDS security group",
            "egress": [],
            "id": "sg-05df608fa3cda393b",
            "ingress": [],
            "name": "dawgs-rds-sg01",
            "name_prefix": "",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dawgs-rds-sg01"
            },
            "tags_all": {
              "Name": "dawgs-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sg-05df608fa3cda393b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dawgs_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group/sg-0f4f05b7dca197db0",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-0f4f05b7dca197db0",
            "ingress": [],
            "name": "dawgs-vpce-sg01",
            "name_prefix": "",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dawgs-vpce-sg01"
            },
            "tags_all": {
              "Name": "dawgs-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sg-0f4f05b7dca197db0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dawgs_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-04c2a7b46b2c27adf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.180.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c2a7b46b2c27adf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dawgs-private-subnet01"
            },
            "tags_all": {
              "Name": "dawgs-private-subnet01"
            },
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-04c2a7b46b2c27adf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-0669c837a2ad3f07d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.180.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0669c837a2ad3f07d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dawgs-private-subnet02"
            },
            "tags_all": {
              "Name": "dawgs-private-subnet02"
            },
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-0669c837a2ad3f07d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dawgs_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-0614666aa8464c3c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.180.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0614666aa8464c3c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dawgs-public-subnet01"
            },
            "tags_all": {
              "Name": "dawgs-public-subnet01"
            },
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-0614666aa8464c3c9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-0713a8c8661527d6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.180.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0713a8c8661527d6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dawgs-public-subnet02"
            },
            "tags_all": {
              "Name": "dawgs-public-subnet02"
            },
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-0713a8c8661527d6d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dawgs_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc/vpc-0e5b7895353587212",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.180.0.0/16",
            "default_network_acl_id": "acl-07df57768d3f1ce6f",
            "default_route_table_id": "rtb-06d5a3fbc37b6d34b",
            "default_security_group_id": "sg-0182d3a2988230823",
            "dhcp_options_id": "dopt-00c5775a73b9d13e0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5b7895353587212",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d5a3fbc37b6d34b",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "tags": {
              "Name": "dawgs-vpc01"
            },
            "tags_all": {
              "Name": "dawgs-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpc-0e5b7895353587212",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-030b5fc8d4bc8f0e6",
            "dns_entry": [
              {
                "dns_name": "vpce-030b5fc8d4bc8f0e6-nltecpyb.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-030b5fc8d4bc8f0e6-nltecpyb-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-030b5fc8d4bc8f0e6-nltecpyb-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08188003GXXCASX6KOZI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-030b5fc8d4bc8f0e6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-026834fd9aa9a91c6",
              "eni-0b5d265cd251ced1c"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f4f05b7dca197db0"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.148",
                "subnet_id": "subnet-04c2a7b46b2c27adf"
              },
              {
                "ipv4": "10.180.12.104",
                "subnet_id": "subnet-0669c837a2ad3f07d"
              }
            ],
            "subnet_ids": [
              "subnet-04c2a7b46b2c27adf",
              "subnet-0669c837a2ad3f07d"
            ],
            "tags": {
              "Name": "dawgs-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "dawgs-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-030b5fc8d4bc8f0e6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-0b654911d53a0a078",
            "dns_entry": [
              {
                "dns_name": "vpce-0b654911d53a0a078-bc6f27jg.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b654911d53a0a078-bc6f27jg-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b654911d53a0a078-bc6f27jg-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z019175712MFYYMJVO0VM"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z01910021GZLG2QN93KIP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b654911d53a0a078",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05d6161f1e0d1a353",
              "eni-0bc69bd1a6d26bb7d"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f4f05b7dca197db0"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.199",
                "subnet_id": "subnet-04c2a7b46b2c27adf"
              },
              {
                "ipv4": "10.180.12.236",
                "subnet_id": "subnet-0669c837a2ad3f07d"
              }
            ],
            "subnet_ids": [
              "subnet-04c2a7b46b2c27adf",
              "subnet-0669c837a2ad3f07d"
            ],
            "tags": {
              "Name": "dawgs-vpce-kms01"
            },
            "tags_all": {
              "Name": "dawgs-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-0b654911d53a0a078",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-027a483d854c6e67a",
            "dns_entry": [
              {
                "dns_name": "vpce-027a483d854c6e67a-dufjobxt.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-027a483d854c6e67a-dufjobxt-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-027a483d854c6e67a-dufjobxt-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z014807137TPM6FVX5H5A"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05677652LW5EW9VMGHP9"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0568813PPDPJ4AWFRHH"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z08164032A9QVPOFYBWJR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-027a483d854c6e67a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0ad644fb2055da99d",
              "eni-0b2633360ea05dd8c"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f4f05b7dca197db0"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.97",
                "subnet_id": "subnet-04c2a7b46b2c27adf"
              },
              {
                "ipv4": "10.180.12.100",
                "subnet_id": "subnet-0669c837a2ad3f07d"
              }
            ],
            "subnet_ids": [
              "subnet-04c2a7b46b2c27adf",
              "subnet-0669c837a2ad3f07d"
            ],
            "tags": {
              "Name": "dawgs-vpce-logs01"
            },
            "tags_all": {
              "Name": "dawgs-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-027a483d854c6e67a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-0558f589bf0ae08eb",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0558f589bf0ae08eb",
            "ip_address_type": "ipv4",
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-024c023e6c11c9e98"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "dawgs-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "dawgs-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-0558f589bf0ae08eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.dawgs_private_rt01",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-01e92611bcfc9caa3",
            "dns_entry": [
              {
                "dns_name": "vpce-01e92611bcfc9caa3-kkj8zwcw.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01e92611bcfc9caa3-kkj8zwcw-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01e92611bcfc9caa3-kkj8zwcw-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z054509136UC5ET7NSKAB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01e92611bcfc9caa3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-050c0055df058fd8b",
              "eni-0e2d1ca75b681906d"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f4f05b7dca197db0"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.33",
                "subnet_id": "subnet-04c2a7b46b2c27adf"
              },
              {
                "ipv4": "10.180.12.218",
                "subnet_id": "subnet-0669c837a2ad3f07d"
              }
            ],
            "subnet_ids": [
              "subnet-04c2a7b46b2c27adf",
              "subnet-0669c837a2ad3f07d"
            ],
            "tags": {
              "Name": "dawgs-vpce-secrets01"
            },
            "tags_all": {
              "Name": "dawgs-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-01e92611bcfc9caa3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-0828e1fa5d70d25e0",
            "dns_entry": [
              {
                "dns_name": "vpce-0828e1fa5d70d25e0-lyvhldrw.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0828e1fa5d70d25e0-lyvhldrw-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0828e1fa5d70d25e0-lyvhldrw-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z01910071C1F8HZFYHYJX"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z016855794U5PD04FG46"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0828e1fa5d70d25e0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0778f41519803fbe6",
              "eni-0fdfa88d170689780"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f4f05b7dca197db0"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.246",
                "subnet_id": "subnet-04c2a7b46b2c27adf"
              },
              {
                "ipv4": "10.180.12.205",
                "subnet_id": "subnet-0669c837a2ad3f07d"
              }
            ],
            "subnet_ids": [
              "subnet-04c2a7b46b2c27adf",
              "subnet-0669c837a2ad3f07d"
            ],
            "tags": {
              "Name": "dawgs-vpce-ssm01"
            },
            "tags_all": {
              "Name": "dawgs-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-0828e1fa5d70d25e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dawgs_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-0adb0d4b8e6adffbc",
            "dns_entry": [
              {
                "dns_name": "vpce-0adb0d4b8e6adffbc-xsntwdxn.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0adb0d4b8e6adffbc-xsntwdxn-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0adb0d4b8e6adffbc-xsntwdxn-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z019117134CRMQ84LTT6W"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z014814010EWKZ8K8FK46"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0adb0d4b8e6adffbc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07258398c1d9fbf62",
              "eni-09ff786e8940c9932"
            ],
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f4f05b7dca197db0"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.180.11.196",
                "subnet_id": "subnet-04c2a7b46b2c27adf"
              },
              {
                "ipv4": "10.180.12.67",
                "subnet_id": "subnet-0669c837a2ad3f07d"
              }
            ],
            "subnet_ids": [
              "subnet-04c2a7b46b2c27adf",
              "subnet-0669c837a2ad3f07d"
            ],
            "tags": {
              "Name": "dawgs-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "dawgs-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0e5b7895353587212"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-0adb0d4b8e6adffbc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_subnet.dawgs_private_subnets",
            "aws_vpc.dawgs_vpc01",
            "data.aws_region.dawgs_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dawgs_alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-0f854a5243f408efa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f854a5243f408efa",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05c2a2cf543005b0b",
            "security_group_rule_id": "sgr-0f854a5243f408efa",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-0f854a5243f408efa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_alb_sg01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-06ecdf8490ede6409",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06ecdf8490ede6409",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0c0bc8f3e02642bf5",
            "security_group_rule_id": "sgr-06ecdf8490ede6409",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-06ecdf8490ede6409",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_ec2_sg01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-0855bd9c75de5fb58",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-0855bd9c75de5fb58",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05df608fa3cda393b",
            "security_group_rule_id": "sgr-0855bd9c75de5fb58",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-0855bd9c75de5fb58",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_rds_sg01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpce_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-09be69b2a3c4eb7b0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-09be69b2a3c4eb7b0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f4f05b7dca197db0",
            "security_group_rule_id": "sgr-09be69b2a3c4eb7b0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-09be69b2a3c4eb7b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_vpce_sg01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dawgs_alb_ingres_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-0e2cb659f0857ccce",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0e2cb659f0857ccce",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05c2a2cf543005b0b",
            "security_group_rule_id": "sgr-0e2cb659f0857ccce",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-0e2cb659f0857ccce",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_alb_sg01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dawgs_alb_ingres_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-028050df113c4cfd4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-028050df113c4cfd4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05c2a2cf543005b0b",
            "security_group_rule_id": "sgr-028050df113c4cfd4",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-028050df113c4cfd4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_alb_sg01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dawgs_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-0217cae1ecb21f84d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0217cae1ecb21f84d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05c2a2cf543005b0b",
            "region": "us-east-1",
            "security_group_id": "sg-0c0bc8f3e02642bf5",
            "security_group_rule_id": "sgr-0217cae1ecb21f84d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-0217cae1ecb21f84d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_alb_sg01",
            "aws_security_group.dawgs_ec2_sg01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dawgs_rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-06e80edc76f0c0a73",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL access only from app tier EC2 instances",
            "from_port": 3306,
            "id": "sgr-06e80edc76f0c0a73",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c0bc8f3e02642bf5",
            "region": "us-east-1",
            "security_group_id": "sg-05df608fa3cda393b",
            "security_group_rule_id": "sgr-06e80edc76f0c0a73",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-06e80edc76f0c0a73",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_ec2_sg01",
            "aws_security_group.dawgs_rds_sg01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dawgs_vpce_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-0172ee2bb0e963dc6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow EC2 SG access only for 443",
            "from_port": 443,
            "id": "sgr-0172ee2bb0e963dc6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0c0bc8f3e02642bf5",
            "region": "us-east-1",
            "security_group_id": "sg-0f4f05b7dca197db0",
            "security_group_rule_id": "sgr-0172ee2bb0e963dc6",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-0172ee2bb0e963dc6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.dawgs_ec2_sg01",
            "aws_security_group.dawgs_vpce_sg01",
            "aws_vpc.dawgs_vpc01"
          ]
        }
      ]
    }
  ]
}